--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "ant-design-vue": "^2.2.6",
     "core-js": "^3.6.5",
-    "mitt": "^3.0.0",
     "vue": "^3.0.0",
     "vue-fragment": "^1.5.2",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
